Added phone links

--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
         <header class="main-header">
             <div class="main-header__contacts">
                 <p>
-                    +7 (921) 907 43 73
+                    <a href="tel:+7 (921) 907 43 73">+7 (921) 907 43 73</a>
                 </p>
                 <p>
-                    +7 (921) 567 18 13
+                    <a href="tel:+7 (921) 567 18 13">+7 (921) 567 18 13</a>
                 </p>
             </div>
             
@@ -92,9 +92,9 @@
                 <div class="banner-container">
                     <!-- <img src="img/banner-1200w.jpg" alt="Мегаполис"> -->
                     <picture>
-                        <source srcset="img/banner-512w.jpg" media="(max-width: 500px)">
-                        <source srcset="img/banner-768w.jpg" media="(max-width: 768px)">
-                        <img src="img/banner-1200w.jpg" alt="Мегаполис">
+                        <source srcset="img/banner/banner-512w.jpg" media="(max-width: 500px)">
+                        <source srcset="img/banner/banner-768w.jpg" media="(max-width: 768px)">
+                        <img src="img/banner/banner-1200w.jpg" alt="Мегаполис">
                     </picture>
                 </div>
             </section>
