Water list section done

--- a/index.html
+++ b/index.html
@@ -105,6 +105,74 @@
                 </h2>
                 <div class="divider"></div>
                 <ul class="water-list">
+                    <li class="water-list__item">
+                        <div class="water-item__image">
+                            <img src="img/bottles/vartem-300w.jpg">
+                        </div>
+                        <div class="water-item__info">
+                            <p>
+                                Вода «Вартемяжская»
+                            </p>
+                            <p>
+                                От 140₽
+                            </p>
+                        </div>
+                        <input type="checkbox" id="water-vart" class="visually-hidden water-item__more-checkbox">
+                        <label for="water-vart" class="water-item__more-label">
+                            <p>Подробнее</p>
+                            <svg>
+                                <use href="img/icons/arrow-right.svg#Capa_1"></use>
+                            </svg>
+                        </label>
+                        <div class="water-item__desc">
+                            <ul class="water-item__desc-price">
+                                <li>От 2 до 6 бутылей - 160₽ / бут.</li>
+                                <li>От 7 до 10 бутылей - 150₽ / бут.</li>
+                                <li>От 11 до 15 бутылей - 140₽ / бут.</li>
+                                <li>От 16 бутылей - договорная</li>
+                            </ul>
+                            <p class="water-item__desc-info">
+                                <span>Добывается из артезианских скважин №1414 и №1415 глубиной от 140 до 180 метров, расположенных в экологически чистом месте-деревне Вартемяги Всеволожского района Ленинградской области.</span>
+                                <span>Вода проходит многоступенчатую очистку, сохраняя природную структуру и минерализацию, а также проходит строгий контроль в соответствии с российскими и международными стандартами.</span>
+                                <span>Вода прозрачная, полностью лишена запаха и при кипячении не образует известкового налета благодаря чему является отличной основой для приготовления горячих напитков и пищи, но при этом вода также идеально подходит для ежедневного потребления без предварительного кипячения.</span>
+                            </p>
+                        </div>
+                    </li>
+                    <li class="water-list__item">
+                        <div class="water-item__image">
+                            <img src="img/bottles/megapolis-300w.jpg">
+                        </div>
+                        <div class="water-item__info">
+                            <p>
+                                Вода «Мегаполис»
+                            </p>
+                            <p>
+                                От 120₽
+                            </p>
+                        </div>
+                        <input type="checkbox" id="water-megapolis" class="visually-hidden water-item__more-checkbox">
+                        <label for="water-megapolis" class="water-item__more-label">
+                            <p>Подробнее</p>
+                            <svg>
+                                <use href="img/icons/arrow-right.svg#Capa_1"></use>
+                            </svg>
+                        </label>
+                        <div class="water-item__desc">
+                            <ul class="water-item__desc-price">
+                                <li>От 2 до 6 бутылей - 160₽ / бут.</li>
+                                <li>От 7 до 10 бутылей - 150₽ / бут.</li>
+                                <li>От 11 до 15 бутылей - 140₽ / бут.</li>
+                                <li>От 16 бутылей - договорная</li>
+                            </ul>
+                            <p class="water-item__desc-info">
+                                <span>Доочищенная питьевая вода, проходит четырехступенчатую фильтрацию.</span>
+                                <span>Высококачественная экологически чистая питьевая вода с постоянным сбалансированным солевым составом и низкой минерализацией, что благоприятно сказывается на работе кофейных аппаратов и офисных кофе-машин, а так же препятствует образованию осадка и накипи на нагревательных элементах в чайниках и кулерах для воды.</span>
+                                <span>Нужно отметить, что вода проходит специализированную обработку, которая включает в себя использование фильтров удаления присутствующих в воде взвешенных частиц, позволяет довести минерализацию оптимального значения.</span>
+                                <span>Помимо этого, заботясь о здоровье наших клиентов, наша вода проходит специализированное обеззараживание ультрафиолетовым воздействием, что полностью соответствует всем современным российским санитарным и эпидемиологическим нормам и СанПиН.</span>
+                                <span>Более того, предлагаемая нами продукция полностью соответствует ГОСТ Р 52109-2003 "Вода питьевая, расфасованная в емкости. Общие технические условия".</span>
+                            </p>
+                        </div>
+                    </li>
                 </ul>
             </section>
         </main>
