Coffee section done

--- a/index.html
+++ b/index.html
@@ -106,9 +106,9 @@
                 <div class="divider"></div>
                 <ul class="water-list">
                     <li class="water-list__item">
-                        <div class="water-item__image">
+                        <figure class="water-item__image">
                             <img src="img/bottles/vartem-300w.jpg">
-                        </div>
+                        </figure>
                         <div class="water-item__info">
                             <p>
                                 Вода «Вартемяжская»
@@ -139,9 +139,9 @@
                         </div>
                     </li>
                     <li class="water-list__item">
-                        <div class="water-item__image">
+                        <figure class="water-item__image">
                             <img src="img/bottles/megapolis-300w.jpg">
-                        </div>
+                        </figure>
                         <div class="water-item__info">
                             <p>
                                 Вода «Мегаполис»
@@ -170,6 +170,79 @@
                                 <span>Нужно отметить, что вода проходит специализированную обработку, которая включает в себя использование фильтров удаления присутствующих в воде взвешенных частиц, позволяет довести минерализацию оптимального значения.</span>
                                 <span>Помимо этого, заботясь о здоровье наших клиентов, наша вода проходит специализированное обеззараживание ультрафиолетовым воздействием, что полностью соответствует всем современным российским санитарным и эпидемиологическим нормам и СанПиН.</span>
                                 <span>Более того, предлагаемая нами продукция полностью соответствует ГОСТ Р 52109-2003 "Вода питьевая, расфасованная в емкости. Общие технические условия".</span>
+                            </p>
+                        </div>
+                    </li>
+                </ul>
+            </section>
+
+            <section class="section-coffee">
+                <h2 class="section-title">
+                    Кофе
+                </h2>
+                <div class="divider"></div>
+                <ul class="coffee-list">
+                    <li class="coffee-list__item">
+                        <figure class="coffee-item__figure">
+                            <img src="img/coffee/black-coffee.jpg">
+                        </figure>
+                        <div class="coffee-item__info">
+                            <p class="coffee-item__info-title">
+                                Coffee Beato
+                            </p>
+                            <p class="coffee-item__info-price">
+                                1300 ₽
+                            </p>
+                            <p class="coffee-item__info-desc">
+                                Самый лучший кофе прямиком из Бразилии собранный вручную.
+                            </p>
+                        </div>
+                    </li>
+                    <li class="coffee-list__item">
+                        <figure class="coffee-item__figure">
+                            <img src="img/coffee/black-coffee.jpg">
+                        </figure>
+                        <div class="coffee-item__info">
+                            <p class="coffee-item__info-title">
+                                Coffee Beato
+                            </p>
+                            <p class="coffee-item__info-price">
+                                1300 ₽
+                            </p>
+                            <p class="coffee-item__info-desc">
+                                Самый лучший кофе прямиком из Бразилии собранный вручную.
+                            </p>
+                        </div>
+                    </li>
+                    <li class="coffee-list__item">
+                        <figure class="coffee-item__figure">
+                            <img src="img/coffee/black-coffee.jpg">
+                        </figure>
+                        <div class="coffee-item__info">
+                            <p class="coffee-item__info-title">
+                                Coffee Beato
+                            </p>
+                            <p class="coffee-item__info-price">
+                                1300 ₽
+                            </p>
+                            <p class="coffee-item__info-desc">
+                                Самый лучший кофе прямиком из Бразилии собранный вручную.
+                            </p>
+                        </div>
+                    </li>
+                    <li class="coffee-list__item">
+                        <figure class="coffee-item__figure">
+                            <img src="img/coffee/black-coffee.jpg">
+                        </figure>
+                        <div class="coffee-item__info">
+                            <p class="coffee-item__info-title">
+                                Coffee Beato
+                            </p>
+                            <p class="coffee-item__info-price">
+                                1300 ₽
+                            </p>
+                            <p class="coffee-item__info-desc">
+                                Самый лучший кофе прямиком из Бразилии собранный вручную.
                             </p>
                         </div>
                     </li>
