Added others section and footer

--- a/index.html
+++ b/index.html
@@ -181,74 +181,151 @@
                     Кофе
                 </h2>
                 <div class="divider"></div>
-                <ul class="coffee-list">
-                    <li class="coffee-list__item">
-                        <figure class="coffee-item__figure">
-                            <img src="img/coffee/black-coffee.jpg">
+                <ul class="goods-list">
+                    <li class="goods-list__item">
+                        <figure class="goods-item__figure">
+                            <img src="img/coffee/beato-green.jpg">
                         </figure>
-                        <div class="coffee-item__info">
-                            <p class="coffee-item__info-title">
-                                Coffee Beato
+                        <div class="goods-item__info">
+                            <p class="goods-item__info-title">
+                                Coffee Beato F
                             </p>
-                            <p class="coffee-item__info-price">
-                                1300 ₽
+                            <p class="goods-item__info-price">
+                                800 ₽
                             </p>
-                            <p class="coffee-item__info-desc">
+                            <p class="goods-item__info-desc">
                                 Самый лучший кофе прямиком из Бразилии собранный вручную.
                             </p>
                         </div>
                     </li>
-                    <li class="coffee-list__item">
-                        <figure class="coffee-item__figure">
-                            <img src="img/coffee/black-coffee.jpg">
+                    <li class="goods-list__item">
+                        <figure class="goods-item__figure">
+                            <img src="img/coffee/beato-beige.jpg">
                         </figure>
-                        <div class="coffee-item__info">
-                            <p class="coffee-item__info-title">
-                                Coffee Beato
+                        <div class="goods-item__info">
+                            <p class="goods-item__info-title">
+                                Coffee Primo C
                             </p>
-                            <p class="coffee-item__info-price">
+                            <p class="goods-item__info-price">
                                 1300 ₽
                             </p>
-                            <p class="coffee-item__info-desc">
+                            <p class="goods-item__info-desc">
                                 Самый лучший кофе прямиком из Бразилии собранный вручную.
                             </p>
                         </div>
                     </li>
-                    <li class="coffee-list__item">
-                        <figure class="coffee-item__figure">
-                            <img src="img/coffee/black-coffee.jpg">
+                    <li class="goods-list__item">
+                        <figure class="goods-item__figure">
+                            <img src="img/coffee/gutenberg-coffee.jpg">
                         </figure>
-                        <div class="coffee-item__info">
-                            <p class="coffee-item__info-title">
-                                Coffee Beato
+                        <div class="goods-item__info">
+                            <p class="goods-item__info-title">
+                                Coffee Gutenberg
                             </p>
-                            <p class="coffee-item__info-price">
-                                1300 ₽
+                            <p class="goods-item__info-price">
+                                1400 ₽
                             </p>
-                            <p class="coffee-item__info-desc">
+                            <p class="goods-item__info-desc">
                                 Самый лучший кофе прямиком из Бразилии собранный вручную.
                             </p>
                         </div>
                     </li>
-                    <li class="coffee-list__item">
-                        <figure class="coffee-item__figure">
-                            <img src="img/coffee/black-coffee.jpg">
+                    <li class="goods-list__item">
+                        <figure class="goods-item__figure">
+                            <img src="img/coffee/beato-black.jpg">
                         </figure>
-                        <div class="coffee-item__info">
-                            <p class="coffee-item__info-title">
-                                Coffee Beato
+                        <div class="goods-item__info">
+                            <p class="goods-item__info-title">
+                                Coffee Eletto E
                             </p>
-                            <p class="coffee-item__info-price">
+                            <p class="goods-item__info-price">
                                 1300 ₽
                             </p>
-                            <p class="coffee-item__info-desc">
+                            <p class="goods-item__info-desc">
                                 Самый лучший кофе прямиком из Бразилии собранный вручную.
                             </p>
                         </div>
                     </li>
                 </ul>
             </section>
+
+            <section class="section-others">
+                <h2 class="section-title">
+                    Сопутствующие товары
+                </h2>
+                <div class="divider"></div>
+                <ul class="goods-list">
+                    <li class="goods-list__item">
+                        <figure class="goods-item__figure">
+                            <img src="img/pump.jpg">
+                        </figure>
+                        <div class="goods-item__info">
+                            <p class="goods-item__info-title">
+                                Помпа механическая
+                            </p>
+                            <p class="goods-item__info-price">
+                                500 ₽
+                            </p>
+                            <p class="goods-item__info-desc">
+                                Сюда нужно вставить описание механической помпы.
+                            </p>
+                        </div>
+                    </li>
+                    <li class="goods-list__item">
+                        <figure class="goods-item__figure">
+                            <img src="img/cup-200ml.jpg">
+                        </figure>
+                        <div class="goods-item__info">
+                            <p class="goods-item__info-title">
+                                Одноразовый стакан 0.2 мл
+                            </p>
+                            <p class="goods-item__info-price">
+                                85 ₽ / 100 шт.
+                            </p>
+                            <p class="goods-item__info-desc">
+                                Сюда нужно вставить описание стаканов.
+                            </p>
+                        </div>
+                    </li>
+                </ul>
+            </section>
         </main>
+
+        <footer class="main-footer">
+            <div class="main-footer__contacts">
+                <p>
+                    <a href="tel:+7 (921) 907 43 73">+7 (921) 907 43 73</a>
+                </p>
+                <p>
+                    <a href="tel:+7 (921) 567 18 13">+7 (921) 567 18 13</a>
+                </p>
+            </div>
+            <div class="main-footer__branding">
+                <p>Мегаполис СПб</p>
+                <ul class="main-footer__links">
+                    <li>
+                        <svg>
+                            <use href="img/icons/vk.svg#Capa_1"></use>
+                        </svg>
+                    </li>
+                    <li>
+                        <svg>
+                            <use href="img/icons/whatsapp.svg#Capa_1"></use>
+                        </svg>
+                    </li>
+                    <li>
+                        <svg>
+                            <use href="img/icons/viber.svg#Capa_1"></use>
+                        </svg>
+                    </li>
+                    <li>
+                        <svg>
+                            <use href="img/icons/telegram.svg#Capa_1"></use>
+                        </svg>
+                    </li>
+                </ul>
+            </div>
+        </footer>
 
         <script src="js/app.js"></script>
     </body>
